# OpenFace

./: .gitignore  CMakeLists.txt  OpenFace.sln  README.md
exe/FaceLandmarkVidZmq/: CMakeLists.txt  FaceLandmarkVidZmq.cpp  FaceLandmarkVidZmq.vcxproj
lib/local/LandmarkDetector/: LandmarkDetector.vcxproj
